# clerk-sdk-python

./: .gitignore  LICENSE  README-PYPI.md  README.md  RELEASES.md  USAGE.md  fastapi_clerk.py  fixes.yaml  openapi.yaml  pylintrc  pyproject.toml  pytest_clerk.py
.github/workflows/: pypi_mint_token.yaml  sdk_generation.yaml  sdk_publish.yaml
.speakeasy/: examples.yaml  gen.yaml  speakeasy-suggestions.yaml  workflow.yaml
docs/models/: accountlessapplication.md  accountlessapplicationobject.md  action.md  actor.md  actortoken.md  actortokenactor.md  actortokenobject.md  actortokenstatus.md  adddomainrequestbody.md  addrolestorolesetrequest.md  addrolestorolesetrequestbody.md  adjustcreditbalancerequest.md  adjustorganizationbillingcreditbalancerequest.md  adjustuserbillingcreditbalancerequest.md  admin.md  adminverificationphonenumberstatus.md  adminverificationstatus.md  adminverificationstrategy.md  adminverificationweb3walletstatus.md  adminverificationweb3walletstrategy.md  affiliationverification.md  agenttask.md  agenttaskobject.md  allowlistidentifier.md  allowlistidentifierobject.md  amount.md  annualfee.md  annualmonthlyfee.md  assignpermissiontoorganizationrolerequest.md  attemptemailaddressverificationrequest.md  attemptemailaddressverificationrequestbody.md  attemptphonenumberverificationrequest.md  attemptphonenumberverificationrequestbody.md  attributemapping.md  awscredential.md  balance.md  banuserrequest.md  billingcycle.md  billingpaymentattempt.md  billingpaymentattemptcredits.md  (+1112 more)
docs/sdks/actortokens/: README.md
docs/sdks/adminportallinktokens/: README.md
docs/sdks/agenttasks/: README.md
docs/sdks/allowlistblocklist/: README.md
docs/sdks/allowlistidentifiers/: README.md
docs/sdks/apikeys/: README.md
docs/sdks/awscredentials/: README.md
docs/sdks/betafeatures/: README.md
docs/sdks/billing/: README.md
docs/sdks/blocklistidentifierssdk/: README.md
docs/sdks/clerk/: README.md
docs/sdks/clerkredirecturls/: README.md
docs/sdks/clients/: README.md
docs/sdks/commerce/: README.md
docs/sdks/domainssdk/: README.md
docs/sdks/emailaddresses/: README.md
docs/sdks/emailandsmstemplates/: README.md
docs/sdks/emailsmstemplates/: README.md
helpers/: jwthelper.py
scripts/: prepare-readme.py  prepare_readme.py
src/clerk/: actortokens.py  allowlistidentifiers.py  basesdk.py  betafeatures.py  blocklistidentifiers_sdk.py  clients.py  domains_sdk.py  emailaddresses.py  httpclient.py  instancesettings_sdk.py  invitations.py  jwks.py  jwttemplates.py  misc.py  oauthapplications_sdk.py  organizationinvitations_sdk.py  organizationmemberships_sdk.py  organizations_sdk.py  phonenumbers.py  proxychecks.py  redirecturls.py  samlconnections_sdk.py  sdk.py  sdkconfiguration.py  sessions.py  signintokens.py  signups.py  templates.py  testingtokens.py  users.py  webhooks.py
src/clerk_backend_api/: .genignore  __init__.py  _version.py  actor_tokens.py  actortokens.py  admin_portal_link_tokens.py  agenttasks.py  allow_list_block_list.py  allowlistblocklist.py  allowlistidentifiers.py  api_keys.py  awscredentials.py  basesdk.py  beta_features.py  betafeatures.py  billing.py  blocklistidentifiers_sdk.py  clerk_redirecturls.py  clients.py  commerce.py  domains_sdk.py  email_addresses.py  email_and_sms_templates.py  emailaddresses.py  emailandsmstemplates.py  emailsmstemplates.py  enterpriseconnections_sdk.py  experimentalaccountlessapplications.py  instance_settings_sdk.py  instancesettings_sdk.py  invitations.py  jwks.py  jwks_sdk.py  jwt_templates.py  jwttemplates.py  m2m.py  machines.py  machinetokens.py  management.py  misc.py  (+38 more)
tests/: conftest.py  test_authenticate_request.py  test_clerk_before_request_hook.py  test_jwthelper.py  test_telemetry_hooks.py  test_verify_token.py
tests/telemetry/: test_collector.py  test_samplers.py
(+604 files in other folders)
