[tool.poetry]
name = "clerk-backend-api"
version = "1.0.0"
description = "Python Client SDK for clerk.dev"
authors = ["Clerk",]
readme = "README-PYPI.md"
repository = "https://github.com/clerk/clerk-sdk-python.git"
packages = [
    { include = "clerk_backend_api", from = "src" }
]
include = ["py.typed", "src/clerk_backend_api/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/clerk_backend_api/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^43.0.1"
eval-type-backport = "^0.2.0"
httpx = "^0.27.0"
jsonpath-python = "^1.0.6"
pydantic = "~2.8.2"
pyjwt = "^2.9.0"
python-dateutil = "2.8.2"
typing-inspect = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "==1.10.1"
pylint = "==3.2.3"
pytest = "^8.3.3"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


