[project]
name = "clerk-backend-api"
version = "2.0.0"
description = "Python Client SDK for clerk.dev"
authors = [{ name = "Clerk" },]
readme = "README-PYPI.md"
requires-python = ">=3.9"
dependencies = [
    "cryptography (>=43.0.1,<44.0.0)",
    "eval-type-backport >=0.2.0",
    "httpx >=0.28.1",
    "pydantic >=2.10.3",
    "pyjwt (>=2.9.0,<3.0.0)",
    "python-dateutil >=2.8.2",
    "typing-inspection >=0.4.0",
]

[tool.poetry]
repository = "https://github.com/clerk/clerk-sdk-python.git"
packages = [
    { include = "clerk_backend_api", from = "src" }
]
include = ["py.typed", "src/clerk_backend_api/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/clerk_backend_api/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.14.1"
pylint = "==3.2.3"
pytest = "^8.3.3"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


